src/objects/CSM_QI_CSATInternal__c.object
<CustomObject>
    <description>CSM Internal Customer Satisfaction</description>
    <fields>
        <fullName>Author_Current_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author Current Queue</label>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>CSAT Internal (Author Current Queue)</relationshipLabel>
        <relationshipName>CSAT_Internal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentBody__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CommentCreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comment Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CommentRatings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentCreatedDate__c</fullName>
        <label>Comment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommentId__c</fullName>
        <externalId>true</externalId>
        <label>CommentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentIsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comment Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentIsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comment Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentLasModifiedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comment Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CommentRatings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentLastModified__c</fullName>
        <label>Comment Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommentParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comment Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CommentRatings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RateCreatedDate__c</fullName>
        <label>Rate Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RateNumeric__c</fullName>
        <formula>IF(ISPICKVAL(Rate__c, &quot;Satisfied&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RaterUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rater User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CommentRatings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rater_Current_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rater Current Queue</label>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>CSAT Internal</relationshipLabel>
        <relationshipName>CSAT_Internal</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSAT Internal</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>CSATInternal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAT Internal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>